# helloray

./: CMakeLists.txt  CMakePresets.json  readme.md
include/: camera.h  color.h  helloray.h  hittable.h  hittable_list.h  interval.h  ray.h  sphare.h  utils.h  vec3.h
src/: main.cpp
